--- a/EVS/EVS-war/web/resources/css/siderbar.css
+++ b/EVS/EVS-war/web/resources/css/siderbar.css
@@ -8,10 +8,6 @@
     width:200px;
     left: 0;
     background: #37474F;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
 }
 
 #sidebar header {
